--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DB_HOST = "192.140.57.80"
 DB_USER='inckarri'
 DB_PASSWORD='b6a!Y60M#su8GF'
 DB_NAME='inckarri_core'
+SECRET_KEY='4b7e1c2f-3a0d-4f8b-9c5d-6a2e1f3c4b5d'
+JWT_KEY = '4b7e1c2f-3a0d-4f8b-9c5d-6a2e1f3c4b5d'
